Archive2/a9/d3399525e7085e/output
main.cpp:6:9: error: expected unqualified-id
    char[] a = "banane";
        ^
main.cpp:7:9: error: expected unqualified-id
    char[] b = "banana";
        ^
main.cpp:9:29: error: use of undeclared identifier 'a'
    std::cout << std::equal(a, a+5, b, b+5) << std::endl;
                            ^
3 errors generated.
